# cmake-xcode-openmp

./: .gitignore  CMakeLists.txt  GNUmakefile  README.md  main.cpp
cmake/: FindLLVM.cmake
